--- a/Livrables/scoring_client.ipynb
+++ b/Livrables/scoring_client.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -529,7 +529,7 @@
        "[307511 rows x 122 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -572,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -713,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -759,7 +759,7 @@
        "1  Target variable (1 - client with payment difficulties: he/she had late payment more than X days on at least one of the first Y installments of the loan in our sample, 0 - all other cases)  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -779,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -830,7 +830,7 @@
        "1         0.080729"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -849,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -860,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1161,7 +1161,7 @@
        "[109483 rows x 15 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1172,7 +1172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1201,7 +1201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1231,7 +1231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1274,7 +1274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1299,7 +1299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1312,7 +1312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1339,7 +1339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1354,7 +1354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1373,7 +1373,7 @@
        "                ('regLOG', LogisticRegression(class_weight='balanced'))])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1392,7 +1392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1401,7 +1401,7 @@
        "0.6908927202587581"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1413,7 +1413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1441,23 +1441,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.17513021674787713"
+       "0.3946812693881713"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# fbeta_score\n",
-    "fbeta_score(y_true=y, y_pred=y_pred_LR,beta=0.5)"
+    "# fbeta_score, l'important c'est les FN (faux négatifs) personnes prédites sans risque mais c'est FAUX = DANGER pour la société\n",
+    "fbeta_score(y_true=y, y_pred=y_pred_LR,beta=2)"
    ]
   },
   {
@@ -1476,7 +1476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1491,7 +1491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1513,7 +1513,7 @@
        "                                        random_state=1))])"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1532,7 +1532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1541,7 +1541,7 @@
        "0.9265274062948148"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1553,7 +1553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1581,23 +1581,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9997996895187541"
+       "0.9991992392773135"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# fbeta_score\n",
-    "fbeta_score(y_true=y, y_pred=y_pred_RF,beta=0.5)"
+    "# fbeta_score, l'important c'est les FN (faux négatifs) personnes prédites sans risque mais c'est FAUX = DANGER pour la société\n",
+    "fbeta_score(y_true=y, y_pred=y_pred_RF,beta=2)"
    ]
   },
   {
@@ -1609,17 +1609,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Choix du meilleur modèle le pipeline avec prédiction par RandomForestClassifier\n",
+    "# Le Choix du meilleur modèle est la prédiction par RandomForestClassifier\n",
     "pipeline=pipeline_RF"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1628,7 +1628,7 @@
        "array([0, 0, 0, ..., 0, 0, 0], dtype=int64)"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1641,7 +1641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1651,7 +1651,7 @@
        "       0.04705882])"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1663,7 +1663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1675,7 +1675,7 @@
        "       396995, 402980, 409192, 409608, 427122, 440113], dtype=int64)"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1701,7 +1701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1723,7 +1723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1732,7 +1732,7 @@
        "['pipeline_scoring.joblib']"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1751,7 +1751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1763,7 +1763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1772,7 +1772,7 @@
        "['signature_MLflow.joblib']"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
