commentaires sur métrique fBeta_Score

--- a/Livrables/scoring_client.ipynb
+++ b/Livrables/scoring_client.ipynb
@@ -1457,7 +1457,14 @@
    ],
    "source": [
     "# fbeta_score, l'important c'est les FN (faux négatifs) personnes prédites sans risque mais c'est FAUX = DANGER pour la société\n",
-    "fbeta_score(y_true=y, y_pred=y_pred_LR,beta=2)"
+    "fbeta_score(y_true=y, y_pred=y_pred_LR,beta=2) # avec beta=2, le RECALL (rappel) est prévilégié dans la métrique."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Le nombre de faux positifs n'est pas négligeable :  il a du risque à accorder un crédit avec le modèle de prédiction. "
    ]
   },
   {
@@ -1597,7 +1604,14 @@
    ],
    "source": [
     "# fbeta_score, l'important c'est les FN (faux négatifs) personnes prédites sans risque mais c'est FAUX = DANGER pour la société\n",
-    "fbeta_score(y_true=y, y_pred=y_pred_RF,beta=2)"
+    "fbeta_score(y_true=y, y_pred=y_pred_RF,beta=2) # avec beta=2, le RECALL (rappel) est prévilégié dans la métrique."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Le nombre de faux positifs est faible :  il y a peu de risque à accorder un crédit avec le modèle de prédiction. "
    ]
   },
   {
