--- a/Livrables/scoring_client.ipynb
+++ b/Livrables/scoring_client.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 220,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 221,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 222,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 223,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 223,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 224,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 225,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 226,
    "metadata": {},
    "outputs": [
     {
@@ -529,7 +529,7 @@
        "[307511 rows x 122 columns]"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 226,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [
     {
@@ -572,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 228,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -713,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 229,
    "metadata": {},
    "outputs": [
     {
@@ -759,7 +759,7 @@
        "1  Target variable (1 - client with payment difficulties: he/she had late payment more than X days on at least one of the first Y installments of the loan in our sample, 0 - all other cases)  "
       ]
      },
-     "execution_count": 160,
+     "execution_count": 229,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -779,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 230,
    "metadata": {},
    "outputs": [
     {
@@ -830,7 +830,7 @@
        "1         0.080729"
       ]
      },
-     "execution_count": 161,
+     "execution_count": 230,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -849,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 231,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -860,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 232,
    "metadata": {},
    "outputs": [
     {
@@ -1161,7 +1161,7 @@
        "[109483 rows x 15 columns]"
       ]
      },
-     "execution_count": 163,
+     "execution_count": 232,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1172,7 +1172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 233,
    "metadata": {},
    "outputs": [
     {
@@ -1201,7 +1201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 234,
    "metadata": {},
    "outputs": [
     {
@@ -1231,7 +1231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [
     {
@@ -1274,7 +1274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 236,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1300,7 +1300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 237,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1313,7 +1313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 238,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1323,7 +1323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 239,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1350,7 +1350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 240,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1365,7 +1365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 241,
    "metadata": {},
    "outputs": [
     {
@@ -1384,7 +1384,7 @@
        "                ('regLOG', LogisticRegression(class_weight='balanced'))])"
       ]
      },
-     "execution_count": 172,
+     "execution_count": 241,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1403,7 +1403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 242,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1413,7 +1413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 243,
    "metadata": {},
    "outputs": [
     {
@@ -1422,7 +1422,7 @@
        "0.6926062930995114"
       ]
      },
-     "execution_count": 174,
+     "execution_count": 243,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1434,7 +1434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 244,
    "metadata": {},
    "outputs": [
     {
@@ -1461,7 +1461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 245,
    "metadata": {},
    "outputs": [
     {
@@ -1470,22 +1470,56 @@
        "0.38771621225447084"
       ]
      },
-     "execution_count": 176,
+     "execution_count": 245,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# fbeta_score, avec beta=2, le RECALL (rappel) est prévilégié dans la métrique.\n",
-    "fbeta_score(y_true=y_test, y_pred=y_pred_LR,beta=2) # avec beta=2, le RECALL (rappel) est prévilégié dans la métrique."
+    "fbeta_score(y_true=y_test, y_pred=y_pred_LR,beta=2)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "PERTES : Le nombre de faux négatifs est de 541, l'erreur d'accepter des clients avec risque reste assez faible.  \n",
-    "MANQUE A GAGNER : Par contre nombre de faux positif est de 6190, l'erreur de refuser des clients sans risque est fort, c'est un marché perdu pour la société."
+    "PERTES : Le nombre de FAUX NEGATIFS est de 541, l'erreur d'accepter des clients avec risque reste assez faible.  \n",
+    "MANQUE A GAGNER : Par contre nombre de FAUX POSITIFS est de 6190, l'erreur de refuser des clients sans risque est fort, c'est un marché perdu pour la société."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1.3 Valorisation PERTES pour non remboursement"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 246,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pertes du modèle 365318 kDevises\n"
+     ]
+    }
+   ],
+   "source": [
+    "valorisation=pd.DataFrame()\n",
+    "valorisation['y_true']=y_test\n",
+    "valorisation['y_pred']=y_pred_LR # les y prédit par la Regression Logistique\n",
+    "valorisation['valeur_credit']=X_test.AMT_CREDIT\n",
+    "\n",
+    "pertes=0\n",
+    "for i in range(0,valorisation.shape[0]):\n",
+    "    if (valorisation.iloc[i].y_pred==0) and (valorisation.iloc[i].y_true==1) :\n",
+    "        pertes+=valorisation.valeur_credit.iloc[i]\n",
+    "\n",
+    "print(f'Pertes du modèle {pertes/1000:.0f} kDevises')"
    ]
   },
   {
@@ -1504,7 +1538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 247,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1519,7 +1553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 248,
    "metadata": {},
    "outputs": [
     {
@@ -1540,7 +1574,7 @@
        "                                        random_state=1))])"
       ]
      },
-     "execution_count": 178,
+     "execution_count": 248,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1559,7 +1593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 249,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1569,7 +1603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 250,
    "metadata": {},
    "outputs": [
     {
@@ -1578,7 +1612,7 @@
        "0.9269306297666347"
       ]
      },
-     "execution_count": 180,
+     "execution_count": 250,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1590,7 +1624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 251,
    "metadata": {},
    "outputs": [
     {
@@ -1617,7 +1651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 252,
    "metadata": {},
    "outputs": [
     {
@@ -1626,7 +1660,7 @@
        "0.007791803023219573"
       ]
      },
-     "execution_count": 182,
+     "execution_count": 252,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1640,30 +1674,63 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "PERTES : Le nombre de faux négatifs est de 1589, l'erreur porte sur 3 fois plus de personnes avec ce modèle de prédiction.  \n",
-    "MANQUE A GAGNER : Par contre le nombre de faux positifs est de 11, l'erreur de refuser des clients sans risque reste faible."
+    "PERTES : Le nombre de FAUX NEGATIFS est de 1589, l'erreur porte sur 3 fois plus de personnes avec ce modèle de prédiction.  \n",
+    "MANQUES A GAGNER : Par contre le nombre de FAUX POSITIFS est de 11, l'erreur de refuser des clients sans risque reste faible."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Le meilleur modèle"
+    "#### 2.3 Valorisation PERTES pour non remboursement"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 253,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pertes du modèle 935504 kDevises\n"
+     ]
+    }
+   ],
+   "source": [
+    "valorisation=pd.DataFrame()\n",
+    "valorisation['y_true']=y_test\n",
+    "valorisation['y_pred']=y_pred_RF # les y prédit par la Regression Logistique\n",
+    "valorisation['valeur_credit']=X_test.AMT_CREDIT\n",
+    "\n",
+    "pertes=0\n",
+    "for i in range(0,valorisation.shape[0]):\n",
+    "    if (valorisation.iloc[i].y_pred==0) and (valorisation.iloc[i].y_true==1) :\n",
+    "        pertes+=valorisation.valeur_credit.iloc[i]\n",
+    "\n",
+    "print(f'Pertes du modèle {pertes/1000:.0f} kDevises')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Choix du modèle, celui qui en priorité minimise les pertes : la regression logistique"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 254,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Le Choix du meilleur modèle, ici la regression logistique\n",
     "pipeline=pipeline_LR"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 255,
    "metadata": {},
    "outputs": [
     {
@@ -1672,7 +1739,7 @@
        "array([0, 1, 0, ..., 1, 0, 0], dtype=int64)"
       ]
      },
-     "execution_count": 184,
+     "execution_count": 255,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1685,7 +1752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 256,
    "metadata": {},
    "outputs": [
     {
@@ -1695,7 +1762,7 @@
        "       0.40976879])"
       ]
      },
-     "execution_count": 185,
+     "execution_count": 256,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1707,7 +1774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 257,
    "metadata": {},
    "outputs": [
     {
@@ -1716,7 +1783,7 @@
        "array([100005, 100067, 100091, ..., 456166, 456189, 456202], dtype=int64)"
       ]
      },
-     "execution_count": 186,
+     "execution_count": 257,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1742,7 +1809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 258,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1764,7 +1831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 259,
    "metadata": {},
    "outputs": [
     {
@@ -1773,7 +1840,7 @@
        "['pipeline_scoring.joblib']"
       ]
      },
-     "execution_count": 188,
+     "execution_count": 259,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1792,7 +1859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 260,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1804,7 +1871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 261,
    "metadata": {},
    "outputs": [
     {
@@ -1813,7 +1880,7 @@
        "['signature_MLflow.joblib']"
       ]
      },
-     "execution_count": 190,
+     "execution_count": 261,
      "metadata": {},
      "output_type": "execute_result"
     }
